# itabashi-minutes

./: .env.example  .gitignore  AGENTS.md  CODEX.md  PR_DESCRIPTION.md  README.md  codex-response_202508252033.txt  local_crawl_and_run.sh  pyproject.toml  pytest.ini  setup-mcp-vibe.patch
.github/workflows/: ci.yaml  ci.yml  mcp-weekly.yml  nightly.yml  schema-compat.yml
analysis/: keyword_trends.ipynb  speaker_stats.ipynb  topic_modeling.ipynb
api/: main.py
app/: streamlit_app.py  ui_launcher.py
catalog/: __init__.py  load.py  schema.sql
crawler/: .env.example  config.py  itabashi_spider.patch  itabashi_spider.py
crawler/sample/: sample_minutes.json
docs/: 7_Run tests.txt  Codex-diff_202509021350.diff  Codex-report_202509081935.md  Codex-report_202509091433.md  Codex-report_202509092211.md  Codex-result_202509071110.md  Codex-result_202509071422.md  Codex-result_202509071439.md  Glyph-prompt_202508262107.md  Glyph-prompt_202508262250.md  Glyph-prompt_202508262304.md  Glyph-prompt_202509012349.md  Glyph-prompt_202509021348.md  Glyph-prompt_202509071408.md  Glyph-prompt_202509071415.md  Glyph-prompt_202509071428.md  Glyph-prompt_202509071433.md  Glyph-prompt_202509081643.md  Glyph-prompt_202509081830.md  Glyph-prompt_202509081901.md  Glyph-prompt_202509082035.md  Glyph-prompt_202509090013.md  Glyph-prompt_202509090042.md  Glyph-prompt_202509091115.md  Glyph-prompt_202509091509.md  Glyph-prompt_202509092009.md  Glyph-review_202509012358.md  Glyph-review_202509021439.md  Glyph-review_202509081754.md  Glyph-review_202509081838.md  Glyph-review_202509081847.md  Glyph-review_202509081905.md  Glyph-review_202509081912.md  Glyph-review_202509081918.md  Glyph-review_202509082041.md  Glyph-review_202509090027.md  Glyph-review_202509090046.md  Glyph-review_202509090054.md  Glyph-review_202509091405.md  Glyph-review_202509092057.md  (+11 more)
ingest/: __init__.py  cli.py  normalize.py  normalized_sample.json  patterns.py  pdf_extractor.py  structure_extractor.py  text_normalizer.py
ingest/sample/: sample.json
mcp/: manifest.json  server.py
resources/: normalize.yml
schemas/: minutes.schema.json
scripts/: local_smoke.sh  nightly.sh  one_shot_apply.py  rebuild_catalog.py  verify_sprint3.sh
tests/: test_api_cjk_like.py  test_api_e2e.py  test_api_v02.py  test_catalog_load.py  test_crawler_minimum.py  test_crawler_smoke.py  test_ingest_cli.py  test_mcp_server.py  test_normalizer.py  test_one_shot_apply.py  test_pdf_extractor.py  test_schema.py  test_schema_required.py  test_scripts_rebuild.py  test_structure_extractor.py  test_structure_snapshot.py
tests/fixtures/: minutes_valid.sample.json  sample_minutes_01.json
tests/fixtures/html/: committee-A.html  index.html
tests/fixtures/snapshots/: structure_sample01.json
tools/: check_schema_compat.py
var/: minutes.db
